fixing tile alignment

--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ html,body {
 }
 
 .c2 {
-	margin-left: 22vw;
+	margin-left: 22.5vw;
 }
 
 .c3 {
@@ -152,7 +152,7 @@ html,body {
 }
 
 .r2 {
-	margin-top: 21vw;
+	margin-top: 22vw;
 }
 
 .r3 {
